--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "next": "11.0.1",
-    "react": "17.0.2",
+    "query": "^0.2.0",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.18.1",
     "styled-components": "^5.3.0"
